# Gravity

./: .gitignore  .gitmodules
Scripts/: Windows_vs17_2022_x64.cmd  Windows_vs18_2026_x64.cmd
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/CUDA/: CMakeLists.txt
Source/Engine/CUDA/Source/: Cuda.cpp  Cuda.cu  Cuda.h
Source/Engine/CudaWrapper/: CMakeLists.txt
Source/Engine/CudaWrapper/Source/: CudaClasses.cu  CudaClasses.h  CudaExample.cu  CudaExample.h  CudaWrapper.cpp  CudaWrapper.cu  CudaWrapper.h
Source/Engine/Source/: Core.cpp  Core.h  Logs.h  Screen.h
Source/Engine/Source/Callback/: Callback.cpp  Callback.h  VirtualKey.h
Source/Engine/Source/Common/: Common.cpp  Common.h  Item.cpp  Item.h  Json.h  JsonHelper.cpp  JsonHelper.h  Storage.cpp  Storage.h
Source/Engine/Source/Draw/: Camera.cpp  Camera.h  Draw.cpp  Draw.h  DrawBuffer.cpp  DrawBuffer.h  DrawPoints.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
Source/Engine/Source/FileManager/: FileManager.cpp  FileManager.h
Source/Engine/Source/Files/: FileManager.cpp  FileManager.h  Settings.cpp  Settings.h
Source/Engine/Source/GuiWindow/: GuiWindow.cpp  GuiWindow.h  GuiWindows.cpp  GuiWindows.h  ImGuiHelp.h
Source/Engine/Source/ImGuiWindow/: ImGuiWindow.cpp  ImGuiWindow.h
Source/Engine/Source/Object/: FrameBuffer2.cpp  FrameBuffer2.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h
Source/Engine/Source/Object/Loaders/: ObjLoader.cpp  ObjLoader.h
Source/Engine/Source/SpecificationLogs/: LogMyStlSpecification.cpp  LogMyStlSpecification.h  LogSpecification.cpp  LogSpecification.h  LogStlSpecification.h
Source/Program/: CMakeLists.txt
Source/Program/Gravity/: CameraControl.cpp  DebugContext.h  Gravity.cpp  Gravity.h  GravityCameras.cpp  GravityCameras.h  GravityShader.cpp  GravityShader.h  GravitySpace.cpp  GravitySpace.h  Handler.h  Object.h
Source/Program/Gravity/Callback/: SelectBody.cpp  SelectBody.h
Source/Program/Gravity/Cameras/: CameraControl.cpp  CameraControl.h  GravityCameras.cpp  GravityCameras.h
Source/Program/Gravity/Render/: GravityRender.cpp  GravityRender.h
Source/Program/Gravity/Shaders/: GravityShader.cpp  GravityShader.h
Source/Program/Gravity/Spaces/: Body.h  BodyData.cpp  BodyData.h  CudaSpace.cpp  CudaSpace.h  DefaultSpace.cpp  DefaultSpace.h  GravitySpace.cpp  GravitySpace.h  MainThreadAllInBodySpace.cpp  MainThreadAllInBodySpace.h  MainThreadProtSpace.cpp  MainThreadProtSpace.h  MainThreadSpace.cpp  MainThreadSpace.h  MainThreadSpaceOneBlock.cpp  MainThreadSpaceOneBlock.h  MultiAllThreadNoMutexSpace.cpp  MultiAllThreadNoMutexSpace.h  MultiAllThreadSpace.cpp  MultiAllThreadSpace.h  MultiThreadSpace.cpp  MultiThreadSpace.h  Object.h  OneThreadSpace.cpp  OneThreadSpace.h  ParalelThreadSpace.cpp  ParalelThreadSpace.h  ParallelThreadSpace.cpp  ParallelThreadSpace.h  Space.cpp  Space.h  SpaceIncludes.h  SpaceManager.cpp  SpaceManager.h
Source/Program/Gravity/Spaces/Common/: SpatialGrid.cpp  SpatialGrid.h
Source/Program/Gravity/Spaces/Generators/: GeneretorBox.cpp  GeneretorDefault.cpp  GeneretorOnOrbit.cpp  GeneretorOnPlaneOrbit.cpp  GeneretorSphere.cpp  Generetors.cpp  Generetors.h  GeneretorСircle.cpp
Source/Program/Gravity/Temp/: LogSpecification.h
Source/Program/Gravity/Tests/: SharedPtr.cpp  Test.cpp  Test.h
Source/Program/Gravity/Windows/: AlgorithmWindow.cpp  AlgorithmWindow.h  BottomPanel.cpp  BottomPanel.h  DebugWindow.cpp  DebugWindow.h  DrawFontWindow.cpp  DrawFontWindow.h  GenerateWindow.cpp  GenerateWindow.h  GuiStyle.cpp  GuiStyle.h  InfoWindow.cpp  InfoWindow.h  RenderWindow.cpp  RenderWindow.h  TopPanel.cpp  TopPanel.h
Source/Program/Temp/: LogMyStlSpecification.h  LogSpecification.cpp  LogSpecification.h  LogStlSpecification.h  Test.cpp  Test.h
Source/Resources/Files/Models/: Base.json
Source/Resources/Files/Shaders/: Color.frag  Color.vert  Forward.frag  Forward.vert  Line.frag  Line.vert  Simple.frag  Simple.vert  Texture.frag  Texture.vert  test.frag
Source/Resources/Files/Shaders/Post/: Accumulate.frag  Accumulate.vert  Alpha — копия.frag  Alpha.frag  Alpha.vert  Display.frag  Display.vert
